<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">aSM</string>
    <!-- 登录页 -->
    <string name="login_label_username">用户名</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登录</string>
    <string name="login_label_guest">匿名</string>
    <string name="login_register_link">没有帐号？  <a href="http://www.newsmth.net/bbsreg0.html">注册</a></string>
    <string name="login_asm_help">aSM  <a href="http://asm.zfdang.com/help.html">使用说明</a></string>
    <!-- tab栏 -->
    <string name="cmenu_guidance">首页</string>
    <string name="cmenu_favorite">收藏</string>
    <string name="cmenu_mail">信箱</string>
    <string name="cmenu_category">分区</string>
    <string name="cmenu_profile">资料</string>
    <!-- 信箱 -->
    <string name="mail_inbox">收件箱</string>
    <string name="mail_outbox">发件箱</string>
    <string name="mail_trash">垃圾箱</string>
    <string name="mail_write_mail">发送新信件</string>
    <string name="mail_clear_trash">清空垃圾箱</string>
    <string name="mail_reply">回复信件</string>
    <string name="new_at">＠我</string>
    <string name="new_reply">回我</string>
    <!-- 分区 -->
    <string name="board_autocomplete_tip">请输入分区名</string>
    <!-- 同主题下导航 -->
    <string name="first_page">\u0020\u0020首页\u0020</string>
    <string name="last_page">\u0020\u0020末页\u0020</string>
	<string name="pre_page">\u0020\u0020上页\u0020\u0020</string>
	<string name="next_page">\u0020\u0020下页\u0020\u0020</string>
	<string name="go_page">\u0020GO\u0020</string>
	<string name="go_and_last_page">\u0020GO/末页\u0020</string>
	<!-- 普通模式下导航 -->
	<string name="topic_first_page">主题首篇</string>
	<string name="topic_pre_page">主题上篇</string>
	<string name="topic_next_page">主题下篇</string>
	<string name="topic_all_page">主题展开</string>
	 <!-- 资料页 -->
	<string name="profile_send_mail">发信</string>
	<string name="profile_alive_number">生命力</string>
	<string name="profile_login_count">上站</string>
	<string name="profile_post_count">发表</string>
	<string name="profile_online_status">状态</string>
	 <!-- 标题栏文字 -->
	<string name="title_guidance">首页导读</string>
	<string name="title_favorite">我的收藏夹</string>
	<string name="title_mail">我的信箱</string>
	<string name="title_category">分类讨论区</string>
	<string name="title_profile">个人资料</string>
	<string name="title_search_post">版内文章搜索</string>
	 <!-- post相关 -->
	<string name="post_alert_title">请选择操作</string>
	<string name="post_reply_post">回复文章</string>
	<string name="post_reply_mail">回信给作者</string>
	<string name="post_copy_author">复制作者ID</string>
	<string name="post_query_author">查看作者信息</string>
	<string name="post_copy_content">复制帖子内容</string>
	<string name="post_foward_self">转寄到自己信箱</string>
	<string name="post_foward_external">转寄到他人/外部邮箱</string>
    <string name="post_group_foward_external">合集转寄到他人/外部邮箱</string>
	<string name="post_view_in_browser">在浏览器里打开</string>
    <string name="post_edit_post">修改文章</string>
	<string name="post_delete_post">删除文章</string>
	<string name="write_label_post">发表</string>
	<string name="post_attach">附件</string>
     <!-- fulll screen image 相关 -->
    <string name="full_image_information">图片信息</string>
    <string name="full_image_save">保存图片</string>
    <string name="full_image_back">返回</string>
	 <!-- search post相关 -->
	<string name="search_tip1">标题含有</string>
	<string name="search_tip2">AND</string>
	<string name="search_tip3">标题不含</string>
	<string name="search_tip4">作者帐号</string>
	<string name="search_tip5">时间范围</string>
	<string name="search_tip6">天以内</string>
	<string name="search_tip7">7</string>
	<string name="search_tip8">精华文章</string>
	<string name="search_tip9">带附件文章</string>
	<string name="search_tip10">不含跟贴</string>
	<string name="search_tip11">开始查询</string>
	 <!-- 附件 -->
	<string name="attach_resize">压缩图片</string>
    <string name="upload_file_title">选择要上传的文件...</string>
	<string name="attach_add">添加</string>
	<string name="attach_upload">上传</string>
	<string name="attach_done">完成</string>
    <string name="attach_delete">删除</string>
	 <!-- 关于 -->
	<string name="about_title">关于aSM</string>
	<string name="about_content">Build: %s.\naSM是水木社区(newsmth.net)的一个Android客户端程序。\n\n获取更新和使用说明:\nhttp://asm.zfdang.com\n\nBY leo18, r7000@SMTH\nModified by zfdang</string>
    <string name="about_close">关闭</string>
    <string name="about_upgrade">检查更新</string>
	<!-- 设置 -->
	<string name="setting_remember_user">记住密码</string>
	<string name="setting_remember_user_details">保存在登录页输入的用户名及密码</string>
	<string name="setting_auto_login">自动登录</string>
	<string name="setting_auto_login_details">自动用保存的用户名登录</string>
	<string name="setting_logout_confirm">登出确认</string>
	<string name="setting_logout_confirm_summary_on">退出的时候需要确认</string>
	<string name="setting_logout_confirm_summary_off">退出的时候不需要确认</string>
	<string name="setting_default_tab">默认加载标签页</string>
	<string name="setting_default_tab_details">选择默认加载的标签页</string>
	<string name="setting_default_board_type">默认版面模式</string>
	<string name="setting_default_board_type_details">选择默认的版面模式</string>
	<string name="setting_show_check">启用消息检查</string>
	<string name="setting_show_check_details">自动检查信件、回复与@信息</string>
	<string name="setting_show_check">启用消息检查</string>
	<string name="setting_weibo_style">启用微博风格</string>
	<string name="setting_show_ip">显示ip</string>
	<string name="setting_weibo_style_details">阅读文章时使用新浪微博的缺省版式</string>
	<string name="setting_show_ip_details">阅读文章时显示发帖的IP所属地点</string>
	<string name="setting_use_vibrate">启用振动提示</string>
	<string name="setting_use_vibrate_details">有新消息时将振动提示</string>
	<string name="setting_check_interval">检查消息频率</string>
	<string name="setting_check_interval_details">选择检查消息的间隔时间</string>
	<string name="setting_guidance_font_size">导读/收藏目录/邮箱分类的字体大小</string>
	<string name="setting_guidance_second_font_size">导读二级/收藏版面/邮件字体的大小</string>
	<string name="setting_subject_font_size">版内帖子列表的字体大小</string>
	<string name="setting_post_font_size">帖子内容的字体大小</string>
	<string name="setting_auto_optimize">根据WIFI自动优化</string>
	<string name="setting_auto_optimize_details">开启后WIFI时不限制，无WIFI时根据下面阈值下载图片</string>
	<string name="setting_image_size_threshold">自动下载图片大小阈值</string>
	<string name="setting_image_size_threshold_details">阈值大小以KB为单位，设为0时不限制</string>
	<string name="setting_hide_pin_subject">隐藏置底</string>
	<string name="setting_hide_pin_subject_details">不显示置底文章</string>
	<string name="setting_touch_scroll">触屏滚动</string>
	<string name="setting_touch_scroll_details">在读贴时点击屏幕上下来滚动屏幕</string>
    <string name="setting_touch_swipe">左右划动切换内容</string>
    <string name="setting_touch_swipe_details_on">允许使用左右划动的手势来翻页</string>
    <string name="setting_touch_swipe_details_off">禁止左右划动的手势</string>
    <string name="setting_touch_swipe_back">右划返回</string>
    <string name="setting_touch_swipe_back_details_on">在首页向右划动时返回</string>
    <string name="setting_touch_swipe_back_details_off">禁止右划返回</string>
    <string name="setting_touch_hint">手势操作结果提示</string>
    <string name="setting_touch_hint_details_on">手势结束后提示操作结果</string>
    <string name="setting_touch_hint_details_off">不提示操作结果</string>
	<string name="setting_night_theme">夜间模式</string>
	<string name="setting_night_theme_details">启用夜间模式</string>
	<string name="setting_orientation">屏幕方向</string>
	<string name="setting_orientation_details">选择系统默认或锁定方向</string>
    <string name="setting_image_orientation">全屏看图时屏幕方向</string>
    <string name="setting_image_orientation_details">选择系统默认或重力感应</string>
	<string name="setting_black_list">黑名单</string>
	<string name="setting_black_list_details">请以空格隔开ID</string>
	<string name="setting_forward_email">外部邮箱地址</string>
	<string name="setting_forward_email_details">请输入转寄的外部邮箱地址</string>
	<string name="setting_promotion_show">发帖显示宣传语</string>
	<string name="setting_promotion_show_details">选中后发帖时结尾添加宣传语</string>
	<string name="setting_promotion_content">自定义宣传语</string>
	<string name="setting_promotion_content_details">将显示为"发送自aSM@自定义宣传语“</string>
	<string name="setting_promotion_content_title">请输入自定义内容，例如"三儿子"</string>
	<!-- 下拉刷新 -->
	<string name="pull_to_refresh_pull_label">下拉刷新</string>
	<string name="pull_to_refresh_release_label">松开刷新</string>
	<string name="pull_to_refresh_refreshing_label">读取中</string>
	<string name="pull_to_refresh_tap_label">点击刷新</string>
	
	<string name="action_bar_share_with">分享</string>
	
    <string name="image_info_basic">基本信息:</string>
    <string name="image_info_filename">图片名称</string>
    <string name="image_info_datetime">时间</string>
    <string name="image_info_width">宽度</string>
    <string name="image_info_height">高度</string>
    <string name="image_info_size">文件大小</string>
    <string name="image_info_capture">拍摄信息:</string>
    <string name="image_info_make">制造商</string>
    <string name="image_info_model">型号</string>
    <string name="image_info_focal_length">焦距</string>
    <string name="image_info_aperture">光圈</string>
    <string name="image_info_exposure_time">曝光时间</string>
    <string name="image_info_flash">闪光</string>
    <string name="image_info_iso">ISO</string>
    <string name="image_info_white_balance">白平衡</string>
    <!-- 下拉刷新 -->
    <string name="update_service_checking">检查新版本中...</string>
    <string name="update_service_title_start">正在下载aSM.apk...</string>
    <string name="update_service_title_end">aSM.apk下载完成!</string>
    <string name="update_service_content_end">点击安装</string>
    <string name="update_service_ticker_start">aSM - 开始下载最新版APK...</string>
    <string name="update_service_ticker_end">aSM - APK下载成功，点击安装...</string>
    

</resources>


